--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.8
+      - name: Set up Python 3.8.10
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: 3.8.10
       - name: Install Poetry
         run: pip install poetry
       - name: Install dependencies
         run: poetry install
       - name: Run tests
         run: poetry run coverage run --branch -m pytest
+      - name: Coverage report
+        run: poetry run coverage xml
+      - name: Coverage report to Codecov
+        run: bash <(curl -s https://codecov.io/bash)
